--- a/bundles/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator/pom.xml
+++ b/bundles/org.eclipse.emf.emfstore.client.ui.historybrowsercomparator/pom.xml
@@ -4,9 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.eclipse.emf.emfstore</groupId>
-    <artifactId>emfstore-parent</artifactId>
+    <artifactId>emfstore-bundles-parent</artifactId>
     <version>1.1.0-SNAPSHOT</version>
-    <relativePath>../../releng/emfstore-parent/</relativePath>
+    <relativePath>../../releng/org.eclipse.emf.emfstore.releng.bundles</relativePath>
   </parent>
   <groupId>org.eclipse.emf.emfstore</groupId>
   <artifactId>org.eclipse.emf.emfstore.client.ui.historybrowsercomparator</artifactId>
