--- a/features/org.eclipse.emf.emfstore.example.feature/pom.xml
+++ b/features/org.eclipse.emf.emfstore.example.feature/pom.xml
@@ -4,9 +4,9 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.eclipse.emf.emfstore</groupId>
-    <artifactId>emfstore-parent</artifactId>
+    <artifactId>emfstore-features-parent</artifactId>
     <version>1.1.0-SNAPSHOT</version>
-    <relativePath>../../releng/emfstore-parent/</relativePath>
+    <relativePath>../../releng/org.eclipse.emf.emfstore.releng.features</relativePath>
   </parent>
   <groupId>org.eclipse.emf.emfstore</groupId>
   <artifactId>org.eclipse.emf.emfstore.example.feature</artifactId>
