--- a/tests/org.eclipse.emf.emfstore.server.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.server.test/pom.xml
@@ -6,9 +6,9 @@
 
 	<parent>
 		<groupId>org.eclipse.emf.emfstore</groupId>
-		<artifactId>emfstore-parent</artifactId>
+		<artifactId>emfstore-tests-parent</artifactId>
 		<version>1.1.0-SNAPSHOT</version>
-		<relativePath>../../releng/emfstore-parent/</relativePath>
+		<relativePath>../../releng/org.eclipse.emf.emfstore.releng.tests</relativePath>
 	</parent>
 
 	<groupId>org.eclipse.emf.emfstore</groupId>
