--- a/bundles/org.eclipse.emf.emfstore.server.model/.settings/org.eclipse.core.resources.prefs
+++ b/bundles/org.eclipse.emf.emfstore.server.model/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,4 @@
 eclipse.preferences.version=1
-
 encoding//model/etypes.ecore=UTF-8
-
-
+encoding//model/server.ecorediag=UTF-8
 encoding/<project>=UTF-8
