--- a/releng/emfstore-parent/pom.xml
+++ b/releng/emfstore-parent/pom.xml
@@ -156,7 +156,7 @@
 				</executions>
 			</plugin>
 
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 				<version>${maven-checkstyle-version}</version>
@@ -176,7 +176,7 @@
 					<suppressionsLocation>http://download.eclipse.org/emfclient/config/suppressions.xml</suppressionsLocation>
 					<propertyExpansion>samedir=${basedir}/../../EMFStoreDeveloper/coding</propertyExpansion>
 				</configuration>
-			</plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 
