Bug 427253 - Sonar does not pick up Unit Test Coverage Reports. Fixed overwriting jaccoco vm args Adjusted Sonar ReportPath for jacocco results https://bugs.eclipse.org/bugs/show_bug.cgi?id=427253

--- a/tests/org.eclipse.emf.emfstore.client.conflictdetection.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.client.conflictdetection.test/pom.xml
@@ -31,8 +31,7 @@
 					<testClass>org.eclipse.emf.emfstore.client.conflictdetection.test.AllConflictDetectionTests</testClass>
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>false</useUIThread>
-					<argLine>
-						-Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+					<argLine>${tycho.testArgLine} -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
 					</argLine>
 					<testFailureIgnore>true</testFailureIgnore>
 					<!-- Plugins to be loaded to the osgi runtime -->
