--- a/tests/org.eclipse.emf.emfstore.client.api.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.client.api.test/pom.xml
@@ -30,8 +30,7 @@
                     <testClass>org.eclipse.emf.emfstore.client.api.test.AllAPITests</testClass>
                     <useUIHarness>true</useUIHarness>
                     <useUIThread>false</useUIThread>
-                    <argLine>
-                        -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+                    <argLine>${tycho.testArgLine} -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
                     </argLine>
                     <testFailureIgnore>true</testFailureIgnore>
                     <!-- Plugins to be loaded to the osgi runtime -->
@@ -186,8 +185,7 @@
                             <testClass>org.eclipse.emf.emfstore.client.api.test.AllAPITests</testClass>
                             <useUIHarness>true</useUIHarness>
                             <useUIThread>false</useUIThread>
-                            <argLine>
-                                -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+                            <argLine>${tycho.testArgLine} -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
                             </argLine>
                             <testFailureIgnore>true</testFailureIgnore>
 
