--- a/tests/org.eclipse.emf.emfstore.server.test/pom.xml
+++ b/tests/org.eclipse.emf.emfstore.server.test/pom.xml
@@ -31,8 +31,7 @@
 					<testClass>org.eclipse.emf.emfstore.server.test.AllServerTests</testClass>
 					<useUIHarness>true</useUIHarness>
 					<useUIThread>false</useUIThread>
-					<argLine>
-						-Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+					<argLine>${tycho.testArgLine} -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
 					</argLine>
 					<testFailureIgnore>true</testFailureIgnore>
 					<!-- Plugins to be loaded to the osgi runtime -->
@@ -187,8 +186,7 @@
 							<testClass>org.eclipse.emf.emfstore.server.test.AllServerTests</testClass>
 							<useUIHarness>true</useUIHarness>
 							<useUIThread>false</useUIThread>
-							<argLine>
-								-Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
+							<argLine>${tycho.testArgLine} -Dosgi.requiredJavaVersion=1.5 -Xms40m -Xmx512m
 							</argLine>
 							<testFailureIgnore>true</testFailureIgnore>
 
