renamed new server plugin

--- a/org.eclipse.emf.emfstore.jax2/.project
+++ b/org.eclipse.emf.emfstore.jax2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>org.eclipse.emf.emfstore.jax2</name>
+	<name>org.eclipse.emf.emfstore.jax.server</name>
 	<comment></comment>
 	<projects>
 	</projects>
