created client extension point

--- a/bundles/org.eclipse.emf.emfstore.client/plugin.xml
+++ b/bundles/org.eclipse.emf.emfstore.client/plugin.xml
@@ -31,6 +31,7 @@
    <extension-point id="shareObserver" name="Share Observer" schema="schema/shareObserver.exsd"/>
    <extension-point id="pagedUpdate" name="Paged Update Configuration" schema="schema/pagedUpdate.exsd"/>
    <extension-point id="resourceSetProvider" name="ResourceSet Proider" schema="schema/resourceSetProvider.exsd"/>
+   <extension-point id="connectionManager" name="ConnectionManager" schema="schema/connectionManager.exsd"/>
   <extension point="org.eclipse.emf.ecore.generated_package">
     <package 
        uri = "http://eclipse.org/emf/emfstore/client/model" 
