triying to get declarative Service running

--- a/tests/org.eclipse.emf.emfstore.server.test/build.properties
+++ b/tests/org.eclipse.emf.emfstore.server.test/build.properties
@@ -1,6 +1,7 @@
-source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
                sampleFiles/,\
-               testFiles/
+               testFiles/,\
+               OSGI-INF/component.xml
+source.. = src/
